--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-name: Build and Check
+name: Build and Deploy
 
 on:
   push:
     branches: [ main ] # Adjust branches as needed
   pull_request:
-    branches: [ main ] # Adjust branches as needed
+    branches: [ main ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -15,24 +15,21 @@ permissions:
 
 jobs:
   check:
-    strategy:
-      matrix:
-        node: [ 22, 23 ]
     runs-on: ubuntu-latest
-    name: Astro Check for Node.js ${{ matrix.node }}
+    name: Astro Check (Node.js 22)
     steps:
       - name: Setup Node.js
-        uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4.3.0
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }} # Use LTS
+          node-version: 22
 
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
+        uses: pnpm/action-setup@v4
         with:
-          run_install: false # Disable auto-install
+          run_install: false
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -41,24 +38,21 @@ jobs:
         run: pnpm astro check
 
   build:
-    strategy:
-      matrix:
-        node: [ 22, 23 ]
     runs-on: ubuntu-latest
-    name: Astro Build for Node.js ${{ matrix.node }} # Corrected job name
+    name: Astro Build (Node.js 22)
     steps:
       - name: Setup Node.js
-        uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4.3.0
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 22
 
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
+        uses: pnpm/action-setup@v4
         with:
-          run_install: false # Disable auto-install
+          run_install: false
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -66,7 +60,7 @@ jobs:
       - name: Run Astro Build
         run: pnpm astro build
 
-      - name: Deploy via rsync over SSH
+      - name: Setup SSH Agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_DEPLOY_KEY }}
@@ -74,4 +68,3 @@ jobs:
       - name: Upload files with rsync
         run: |
           rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no -o AddressFamily=inet" ./dist/ kong@boardbon-ssh.tinymeepletalk.com:/var/www/boardbon.tinymeepletalk.com/
-
