--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,21 @@
-name: Build and Deploy
+name: Build and Deploy Astro
 
 on:
   push:
-    branches: [ main ] # Adjust branches as needed
-  pull_request:
-    branches: [ main ]
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
-permissions:
-  contents: read
+    branches: [main]
 
 jobs:
-  check:
-    runs-on: ubuntu-latest
-    name: Astro Check (Node.js 22)
+  build-deploy:
+    runs-on: self-hosted
+    name: Build and Deploy on LAN
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
-
-      - name: Checkout
-        uses: actions/checkout@v4
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -37,34 +28,11 @@ jobs:
       - name: Run Astro Check
         run: pnpm astro check
 
-  build:
-    runs-on: ubuntu-latest
-    name: Astro Build (Node.js 22)
-    steps:
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          run_install: false
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Run Astro Build
+      - name: Build Astro
         run: pnpm astro build
 
-      - name: Setup SSH Agent
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_DEPLOY_KEY }}
-
-      - name: Upload files with rsync
+      - name: Deploy to /var/www
         run: |
-          rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no -o AddressFamily=inet" ./dist/ kong@boardbon-ssh.tinymeepletalk.com:/var/www/boardbon.tinymeepletalk.com/
+          echo "Deploying on kong@wyse5070"
+          rsync -av --delete ./dist/ /var/www/boardbon.tinymeepletalk.com/
+          echo "Deployment finished on kong@wyse5070"
